syntax = "proto2";

package protobuf;

enum ReasonError {
	INTERNAL_SERVER_ERROR = 0;
	ACCOUNT_ALREADY_EXISTS = 1;
	INVALID_PASSWORD = 2;
	INVALID_CREDENTIALS = 3;
}


message RegisterAccount {
	required uint64 requestId = 1;
	required string username = 2;
	required string email = 3;
	required string password = 4;
}
	
message RegistrationSuccess {
	required uint64 requestId = 1;
	required string username = 2;
}	
	
message AuthenticateAccount {
	required uint64 requestId = 1;
	required string identifier = 2;
	required string password = 3;
}

message AuthenticationSuccess {
	required uint64 requestId = 1;
	required string username = 2;
	required string creationDate = 3;
}

message Disconnect {
	required uint64 requestId = 1;
	required string username = 2;
}

message DisconnectSuccess {
	required uint64 requestId = 1;
	required string username = 2;
}
	
message RequestFailure {
	required uint64 requestId = 1;
	required ReasonError reason = 2;
}